--- a/index.html
+++ b/index.html
@@ -5,6 +5,27 @@
     <title>Excursion</title>
 </head>
 <body>
-<p>Hello World</p>
+    <header>
+        <h1 class='head'>Discover hidden places in the world around you</h1>
+        <a href="#" class="download" id='down'>Download Excursion (Coming soon!)</a>
+    </header>
+    <main>
+        <video autoplay muted>
+            <source src="resources/videos/excursion.mp4" type="video/mp4">
+        </video>
+        <h2 class='main'>Your personal travel guide</h2>
+        <p class='line'>Excursion remembers places you like, and recommends new points of interest around you.</p>
+        <figure>
+            <img src="resources/images/camp.jpg" alt="camp at night">
+        </figure>
+        <figure>
+            <img src="resources/images/phone.jpg" alt="cartoon phone">
+        </figure>
+        <h2 class='main'>Coming Soon for iPhone and Android</h2>
+        <a href="#down" class="download">Download Excursion (Coming soon!)</a>
+    </main>
+    <footer>
+        <p class='trademark'>© Excursion</p>
+    </footer>
 </body>
 </html>
